--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,62 @@
-.App {
-  text-align: center;
+*, *::before, *::after{
+    box-sizing: border-box;
+    margin:0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h1, h2, h3, h4, p, label, a{
+    font-family:'Inter', sans-serif;
+    margin:0;
+    width:fit-content;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+h1{
+    font-size: 2.25rem;
+    font-weight: 1000;
+    text-transform: uppercase;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+p{
+    font-size: 1.125rem;
 }
 
-.App-link {
-  color: #61dafb;
+label{
+    font-size: 1.25rem;
+    font-weight: 1000;
+    letter-spacing: 1px;
+    text-transform: uppercase;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+input{
+    width: 100%;
+    font-size: 1.25rem;
+    padding-inline: 1rem;
+    padding-block: 0.5rem;
+    border: 1px solid black;
+    border-radius: 0;
+    margin-top: 1rem;
+    margin-bottom: 2.5rem;
+}
+
+input:focus{
+    outline: 2px solid black;
+}
+
+input:invalid{
+    outline: 2px solid #561212;
+}
+
+.button-form{
+    width:100%;
+    background-color: black;
+    color:white;
+    font-family: 'Inter', sans-serif;
+    font-size: 1.5rem;
+    font-weight: 500;
+    padding-block: 1rem;
+}
+
+.link-form{
+    font-size: 1.25rem;
+    color:black;
+    font-weight: 500;
 }
