--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
     margin:0;
 }
 
-h1, h2, h3, h4, p, label, a{
+h1, h2, h3, h4, p, label, a, div{
     font-family:'Inter', sans-serif;
     margin:0;
     width:fit-content;
@@ -60,3 +60,13 @@ input:invalid{
     color:black;
     font-weight: 500;
 }
+
+section{
+    margin-bottom: 5rem;
+}
+
+#root>section:first-child{
+    min-height: 100vh;
+}
+
+
