--- a/src/components/drag_and_drop/dragAndDrop.css
+++ b/src/components/drag_and_drop/dragAndDrop.css
@@ -1,10 +1,12 @@
 .dropzone{
-    width:65%;
+    width:100%;
     background-image: linear-gradient(to right, #FFEFF2, #DBE9F2);
     display:flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
+    margin-top: 1rem;
+    margin-bottom: 2.5rem;
 }
 
 .dropzone-content{
@@ -12,16 +14,20 @@
     flex-direction: row;
     align-items: center;
     justify-content: center;
+    padding-block: 0.5rem;
 }
 
-img{
+.img{
     margin-right: 0.5rem;
     margin-block: 0.75rem;
+    background-image: url('../../assets/file_png.png');
+    width:4.5rem;
+    height: 4.5rem;
 }
 
-p{
+.dropzone-content>p{
     font-size: 1.5rem;
     font-weight: 500;
     color:black;
-    max-width: 33%;
+    max-width: 50%;
 }
