--- a/src/containers/professors_list/professorsList.css
+++ b/src/containers/professors_list/professorsList.css
@@ -16,6 +16,10 @@
     justify-content: space-between;
 }
 
+.professors-list{
+    width:100%;
+}
+
 .professor-list>p{
     font-size: 1.25rem;
     font-weight: 400;
@@ -42,20 +46,23 @@ img{
 }
 
 .progress-bar{
-    width: 4%;
+    width: 14%;
     height: 1.25rem;
     border: 1px solid black;
     border-radius: 100px;
     position:relative;
+    overflow: hidden;
 }
 
 .progress-bar-bottom{
     width:100%;
     height: 100%;
     background-color: black;
-    padding: auto auto auto 0.5rem;
     display: flex;
-    align-items: end;
+    align-items: center;
+    padding-right: 0.5rem;
+    justify-content: flex-end;
+    color: white;
 }
 
 .progress-bar-top{
@@ -64,9 +71,10 @@ img{
     top:0;
     left:0;
     background-image: linear-gradient(to right, #FFEFF2, #DBE9F2);
-    padding: auto auto auto 0.5rem;
+    border-radius: 100px;
+    padding-left: 0.5rem;
     display: flex;
-    align-items: end;
+    align-items: center;
 }
 
 .waiting{
@@ -74,12 +82,14 @@ img{
     text-align: right;
 }
 
-button{
+.choose{
     width:17%;
     height: 2.625rem;
     display:grid;
     place-items: center;
     background-image: linear-gradient(to right, #FFEFF2, #DBE9F2);
+    border:none;
+    margin: 0;
     color:black;
     font-family: "Inter", sans-serif;
     font-size: 1.125rem;
